--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,7 @@
     <modules>
         <module>cloud-provider-payment8001</module>
         <module>cloud-consumer-order8002</module>
+        <module>cloud-api-commons</module>
     </modules>
 
     <!-- 统一jar包版本管理 -->
