--- a/cloud-provider-payment8001/pom.xml
+++ b/cloud-provider-payment8001/pom.xml
@@ -15,7 +15,7 @@
         <dependency>
             <groupId>com.humid.springcloud</groupId>
             <artifactId>cloud-api-commons</artifactId>
-            <version>1.0-SNAPSHOT</version>
+            <version>${project.version}</version>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
