eureka服务注册与发现

--- a/cloud-consumer-order8002/pom.xml
+++ b/cloud-consumer-order8002/pom.xml
@@ -42,5 +42,10 @@
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
         </dependency>
+        <!--  eureka 客户端  -->
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
+        </dependency>
     </dependencies>
 </project>
