--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,8 @@
         <module>cloud-consumer-order8002</module>
         <module>cloud-api-commons</module>
         <module>cloud-eureka-server7001</module>
+        <module>cloud-eureka-server7002</module>
+        <module>cloud-provider-payment8010</module>
     </modules>
 
     <!-- 统一jar包版本管理 -->
