--- a/cloud-consumer-order8002/src/main/resources/application.yml
+++ b/cloud-consumer-order8002/src/main/resources/application.yml
@@ -13,3 +13,5 @@ eureka:
     register-with-eureka: true
     # 是否从EurekaServer抓取已有的注册信息，默认为true。单节点无所谓，集群必须设置为true才能配合ribbon使用负载均衡
     fetch-registry: true
+  instance:
+    instance-id: consumer8002
