--- a/cloud-provider-payment8001/src/main/resources/application.yml
+++ b/cloud-provider-payment8001/src/main/resources/application.yml
@@ -26,3 +26,6 @@ eureka:
     register-with-eureka: true
     # 是否从EurekaServer抓取已有的注册信息，默认为true。单节点无所谓，集群必须设置为true才能配合ribbon使用负载均衡
     fetch-registry: true
+  instance:
+    instance-id: provider8001
+    prefer-ip-address: true  # 访问路径可以显示IP地址
