--- a/cloud-eureka-server7001/src/main/resources/application.yml
+++ b/cloud-eureka-server7001/src/main/resources/application.yml
@@ -10,4 +10,11 @@ eureka:
     fetch-registry: false
     service-url:
       # 设置与Eureka server交互的地址查询服务和注册服务都需要依赖这个地址。
-      defaultZone: http://192.168.1.132:7002/eureka/
+#      defaultZone: http://192.168.1.132:7002/eureka/
+      # 单机版
+      defaultZone: http://${eureka.instance.hostname}:${server.port}/eureka/
+  server:
+    # 关闭自我保护机制，保证不可用服务被及时踢除
+    enable-self-preservation: false
+    # 剔除时间间隔
+    eviction-interval-timer-in-ms: 10000
