--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,10 @@
         <module>cloud-eureka-server7001</module>
         <module>cloud-eureka-server7002</module>
         <module>cloud-provider-payment8010</module>
+        <module>cloud-provider-payment8011</module>
+        <module>cloud-consumerzk-order8003</module>
+        <module>cloud-providerconsul-payment8012</module>
+        <module>cloud-consumerconsul-order8004</module>
     </modules>
 
     <!-- 统一jar包版本管理 -->
