--- a/cloud-provider-payment8010/src/main/resources/application.yml
+++ b/cloud-provider-payment8010/src/main/resources/application.yml
@@ -19,9 +19,9 @@ mybatis:
 eureka:
   client:
     service-url:
-      # defaultZone: http://127.0.0.1:7001/eureka
+       defaultZone: http://127.0.0.1:7001/eureka
       # 集群版
-      defaultZone: http://127.0.0.1:7001/eureka,http://192.168.1.132:7002/eureka
+#      defaultZone: http://127.0.0.1:7001/eureka,http://192.168.1.132:7002/eureka
     # 表示是否将自己注册进Eurekaserver默认为true。
     register-with-eureka: true
     # 是否从EurekaServer抓取已有的注册信息，默认为true。单节点无所谓，集群必须设置为true才能配合ribbon使用负载均衡
