--- a/cloud-provider-hystrix-payment8001/src/main/resources/application.yml
+++ b/cloud-provider-hystrix-payment8001/src/main/resources/application.yml
@@ -9,3 +9,9 @@ eureka:
       defaultZone: http://127.0.0.1:7001/eureka
     fetch-registry: true
     register-with-eureka: true
+
+management:
+  endpoints:
+    web:
+      exposure:
+        include: '*'
