--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,7 @@
         <module>cloud-consumer-feign-order8005</module>
         <module>cloud-provider-hystrix-payment8001</module>
         <module>cloud-consumer-feign-hystrix-order8002</module>
+        <module>cloud-consumer-hystrix-dashboard9001</module>
     </modules>
 
     <!-- 统一jar包版本管理 -->
