--- a/cloud-gateway-server9527/src/main/resources/application.yml
+++ b/cloud-gateway-server9527/src/main/resources/application.yml
@@ -17,10 +17,18 @@ spring:
     gateway:
       routes:
         - id: payment_routh1           # 路由的id，没有固定的规则但要求唯一
-          uri: http://127.0.0.1:8001   # 匹配后提供的服务路由地址
+          #uri: http://127.0.0.1:8001   # 匹配后提供的服务路由地址
+          uri: lb://cloud-provider-service
           predicates:                  # 断言，路径相匹配的进行路由
             - Path=/payment/get/**
+            - After=2021-05-28T16:40:47.471+08:00[Asia/Shanghai]
         - id: payment_routh2           # 路由的id，没有固定的规则但要求唯一
-          uri: http://127.0.0.1:8001   # 匹配后提供的服务路由地址
+          #uri: http://127.0.0.1:8001   # 匹配后提供的服务路由地址
+          uri: lb://cloud-provider-service
           predicates:                  # 断言，路径相匹配的进行路由
             - Path=/payment/lb/**
+#            - Cookie=username, qjp
+#            - Header=X-Request-Id, \d+
+      discovery:
+        locator:
+          enabled: true   # 开启动态路由配置
