--- a/cloud-provider-payment8001/src/main/resources/application.yml
+++ b/cloud-provider-payment8001/src/main/resources/application.yml
@@ -15,6 +15,9 @@ mybatis:
   mapper-locations: classpath:mapper/*.xml
   # entity 别名类所在包
   type-aliases-package: com.humid.springcloud.entities
+  #配置控制台打印完整带参数SQL语句
+  configuration:
+    log-impl: org.apache.ibatis.logging.stdout.StdOutImpl
 
 eureka:
   client:
