添加SpringCloud Bus，消息总线

--- a/cloud-config-client-3356/src/main/resources/bootstrap.yml
+++ b/cloud-config-client-3356/src/main/resources/bootstrap.yml
@@ -1,26 +1,28 @@
 server:
-  port: 3355
+  port: 3356
 spring:
   application:
     name: config-client
   cloud:
     config:
-      label: main # 分支名称
-      name: config # 配置文件名称
-      profile: dev # 读取后置名称
       uri: http://127.0.0.1:3344 # 配置中心地址
+      label: main   # 分支名称
+      name: config  # 配置文件名称
+      profile: dev  # 读取后置名称
   # RabbitMQ相关配置，15762是web界面管理端口，5762是MQ访问端口
   rabbitmq:
     host: 127.0.0.1
     port: 5672
     username: guest
     password: guest
-#服务注册到eureka地址
+
+# 服务注册到Eureka
 eureka:
   client:
     service-url:
-      defaultZone: http://localhost:7001/eureka
-# 暴露监控端点
+      defaultZone: http://127.0.0.1:7001/eureka
+
+# web端点访问控制
 management:
   endpoints:
     web:
