--- a/cloud-config-center-3344/src/main/resources/application.yml
+++ b/cloud-config-center-3344/src/main/resources/application.yml
@@ -12,8 +12,20 @@ spring:
             - springcloud-config
           timeout: 30   # 设置超时时间 30秒
       label: main        # 读取分支
+  # rabbitmq相关配置
+  rabbitmq:
+    host: 127.0.0.1
+    port: 5672
+    username: guest
+    password: guest
 # 服务注册到eureka地址
 eureka:
   client:
     service-url:
       defaultZone: http://127.0.0.1:7001/eureka
+# 暴露bus刷新配置的端点
+management:
+  endpoints:
+    web:
+      exposure:
+        include: "bus-refresh"
