--- a/pom.xml
+++ b/pom.xml
@@ -27,6 +27,8 @@
         <module>cloud-config-center-3344</module>
         <module>cloud-config-client-3355</module>
         <module>cloud-config-client-3356</module>
+        <module>cloud-stream-rabbitmq-provider8801</module>
+        <module>cloud-stream-rabbitmq-consumer8802</module>
     </modules>
 
     <!-- 统一jar包版本管理 -->
