--- a/pom.xml
+++ b/pom.xml
@@ -32,6 +32,7 @@
         <module>cloudalibaba-provider-payment9001</module>
         <module>cloudalibaba-consumer-nacos-order9051</module>
         <module>cloudalibaba-config-nacos-client3377</module>
+        <module>cloudalibaba-sentinel-service8401</module>
     </modules>
 
     <!-- 统一jar包版本管理 -->
@@ -103,7 +104,6 @@
                 <groupId>org.projectlombok</groupId>
                 <artifactId>lombok</artifactId>
                 <version>${lombok.version}</version>
-                <optional>true</optional>
             </dependency>
         </dependencies>
     </dependencyManagement>
