--- a/pom.xml
+++ b/pom.xml
@@ -35,6 +35,9 @@
         <module>cloudalibaba-sentinel-service8401</module>
         <module>cloudalibaba-provider-payment9003</module>
         <module>cloudalibaba-consumer-nacos-order9052</module>
+        <module>cloud-seata-order-service2001</module>
+        <module>cloud-seata-storage-service2002</module>
+        <module>cloud-seata-account-service2003</module>
     </modules>
 
     <!-- 统一jar包版本管理 -->
